--- a/css/lunbo.css
+++ b/css/lunbo.css
@@ -1,6 +1,6 @@
 *{padding: 0;margin: 0;}
 body{background-color: #ccc;}
-.box{width: 640px;height: 480px;margin-left: 25%;margin-top: 4%; overflow: hidden;position: relative;}
+.box{width: 640px;height: 480px;margin:30px auto; overflow: hidden;position: relative;}
 .box .tu ul{width: 500%;position: absolute;}
 .box .tu ul li{list-style: none;float: left;}	
 .box .dian ul{width: 160px;position: absolute;left:245px;bottom:15px;text-align: center;z-index:3}
